# stern

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
stern/: __main__.py  statusbar.py
stern/bar/: modules.py  statusbar.py
