[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stern"
version = "0.0.1"
requires-python = ">= 3.11"
authors = []
maintainers = []
description = "Fabric Shell"
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
stern = "main:main"
